Fix a few minor visual bugs.
- Position social icons correctly on large tablets
- Correctly truncate CharlieCard link on horizontal tablet and vertical phone

--- a/apps/site/web/static/css/_fares.scss
+++ b/apps/site/web/static/css/_fares.scss
@@ -226,6 +226,10 @@ a {
   display: block;
   padding: .75em .5em;
 
+  .charlie-card-truncate {
+    @include truncate();
+  }
+
   @include media-breakpoint-up(md) {
     &:last-child {
       border-bottom: 1px solid $gray-lightest;
