--- a/apps/site/web/static/css/_header.scss
+++ b/apps/site/web/static/css/_header.scss
@@ -122,50 +122,6 @@
   }
 }
 
-.social-nav {
-  padding-top: 7px;
-
-  @include media-breakpoint-down(md) {
-    // move social icons up on tablets
-    bottom: 3rem;
-    height: 0;
-    padding: 0;
-    position: relative;
-  }
-
-  a {
-    border-radius: 100%;
-    color: $white;
-    height: 1.5em;
-    text-align: center;
-    width: 1.5em;
-  }
-
-  .nav-item {
-    margin-left: 0;
-
-    + .nav-item {
-      margin-left: .5rem;
-    }
-  }
-
-  .social-nav-instagram {
-    background-color: $white;
-
-    .fa {
-      color: $instagram;
-    }
-  }
-
-  .social-nav-youtube {
-    background-color: $youtube;
-  }
-
-  .social-nav-twitter {
-    background-color: $twitter;
-  }
-}
-
 .header {
   background-color: $white;
 }
